-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.4.0-beta1
-
None
-
32fa850a6d12718f7c9fa07c4cd7f6d5f6b60224
I haven't found a good easy way to reproduce it, but can make it happen every time by randomly switching views, splitting and closing Outline views.
It seems to require opening multiple Outline views though.
0 __GI_raise raise.c 56 0x7ffff4efd3a9 1 __GI_abort abort.c 89 0x7ffff4f004c8 2 qt_message_fatal qlogging.cpp 1411 0x7ffff5fb9e05 3 QMessageLogger::fatal qlogging.cpp 639 0x7ffff5fb6790 4 qt_assert qglobal.cpp 2810 0x7ffff5fb0710 5 TextEditor::Internal::OutlineWidgetStack::saveSettings outlinefactory.cpp 113 0x7fffe7a3cc58 6 TextEditor::Internal::OutlineFactory::saveSettings outlinefactory.cpp 210 0x7fffe7a3d4ac 7 Core::Internal::NavigationSubWidget::saveSettings navigationsubwidget.cpp 173 0x7fffec258afd 8 Core::NavigationWidget::closeSubWidget navigationwidget.cpp 296 0x7fffec20fa20 9 Core::NavigationWidget::qt_static_metacall moc_navigationwidget.cpp 147 0x7fffec30a7d8 10 QMetaObject::activate qobject.cpp 3716 0x7ffff628cafc 11 QMetaObject::activate qobject.cpp 3582 0x7ffff628c300 12 Core::Internal::NavigationSubWidget::closeMe moc_navigationsubwidget.cpp 150 0x7fffec30c891 13 Core::Internal::NavigationSubWidget::qt_static_metacall moc_navigationsubwidget.cpp 82 0x7fffec30c645 14 QMetaObject::activate qobject.cpp 3716 0x7ffff628cafc 15 QMetaObject::activate qobject.cpp 3582 0x7ffff628c300 16 QAbstractButton::clicked moc_qabstractbutton.cpp 298 0x7ffff73999c0 17 QAbstractButtonPrivate::emitClicked qabstractbutton.cpp 534 0x7ffff70665ab 18 QAbstractButtonPrivate::click qabstractbutton.cpp 527 0x7ffff706653a 19 QAbstractButton::mouseReleaseEvent qabstractbutton.cpp 1132 0x7ffff7067a18 20 QToolButton::mouseReleaseEvent qtoolbutton.cpp 609 0x7ffff7157cf9 21 QWidget::event qwidget.cpp 8656 0x7ffff6f93d5b 22 QAbstractButton::event qabstractbutton.cpp 1089 0x7ffff7067856 23 QToolButton::event qtoolbutton.cpp 965 0x7ffff71591c0 24 QApplicationPrivate::notify_helper qapplication.cpp 3722 0x7ffff6f45018 25 QApplication::notify qapplication.cpp 3280 0x7ffff6f42ee4 26 QCoreApplication::notifyInternal qcoreapplication.cpp 932 0x7ffff6248f6e 27 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 231 0x7ffff6f47df5 28 QApplicationPrivate::sendMouseEvent qapplication.cpp 2751 0x7ffff6f417c3 29 QWidgetWindow::handleMouseEvent qwidgetwindow.cpp 506 0x7ffff6fbc118 30 QWidgetWindow::event qwidgetwindow.cpp 173 0x7ffff6fbaec9 31 QApplicationPrivate::notify_helper qapplication.cpp 3722 0x7ffff6f45018 32 QApplication::notify qapplication.cpp 3164 0x7ffff6f426ce 33 QCoreApplication::notifyInternal qcoreapplication.cpp 932 0x7ffff6248f6e 34 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 231 0x7ffff680c6c1 35 QGuiApplicationPrivate::processMouseEvent qguiapplication.cpp 1796 0x7ffff6805bfd 36 QGuiApplicationPrivate::processWindowSystemEvent qguiapplication.cpp 1598 0x7ffff6805212 37 QWindowSystemInterface::sendWindowSystemEvents qwindowsysteminterface.cpp 572 0x7ffff67ee79f 38 QUnixEventDispatcherQPA::processEvents qunixeventdispatcher.cpp 63 0x7ffff7f027b1 39 QEventLoop::processEvents qeventloop.cpp 128 0x7ffff6245c54 40 QEventLoop::exec qeventloop.cpp 204 0x7ffff6245f37 41 QCoreApplication::exec qcoreapplication.cpp 1185 0x7ffff6249677 42 QGuiApplication::exec qguiapplication.cpp 1532 0x7ffff6804fbe 43 QApplication::exec qapplication.cpp 2956 0x7ffff6f41efb 44 main main.cpp 517 0x40e281
For Gerrit Dashboard: QTCREATORBUG-13614 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
101779,6 | Outline: Redo save/restore of settings | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |